--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -8,16 +8,16 @@
   }
 
   .sidebar-container {
-    transition: width 0.28s;
-    width: $sideBarWidth !important;
-    background-color: $menuBg;
-    height: 100%;
     position: fixed;
-    font-size: 0px;
     top: 0;
     bottom: 0;
     left: 0;
+    width: $sideBarWidth !important;
+    height: 100%;
+    background: -webkit-linear-gradient(bottom, #3d6df8, #5b8cff);
+    font-size: 0;
     z-index: 1001;
+    transition: width 0.28s;
     overflow: hidden;
 
     // reset element-ui css
@@ -26,11 +26,12 @@
     }
 
     .scrollbar-wrapper {
+      background: url('~@/assets/common/leftnavBg.png') no-repeat 0 100%;
       overflow-x: hidden !important;
     }
 
     .el-scrollbar__bar.is-vertical {
-      right: 0px;
+      right: 0;
     }
 
     .el-scrollbar {
@@ -66,6 +67,29 @@
       border: none;
       height: 100%;
       width: 100% !important;
+      a{
+        li{
+          .svg-icon{
+            color: #fff;
+            font-size: 18px;
+            vertical-align: middle;
+            .icon{
+              color:#fff;
+            }
+          }
+          span{
+            color: #fff;
+          }
+          &:hover{
+            .svg-icon{
+              color: #43a7fe
+            }
+            span{
+              color: #43a7fe;
+            }
+          }
+        }
+      }
     }
 
     // menu hover
@@ -159,7 +183,7 @@
   // mobile responsive
   .mobile {
     .main-container {
-      margin-left: 0px;
+      margin-left: 0;
     }
 
     .sidebar-container {
