设置左侧菜单的图标

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -55,7 +55,7 @@
     }
 
     .svg-icon {
-      margin-right: 16px;
+      margin-right: 18px;
     }
 
     .sub-el-icon {
@@ -67,24 +67,30 @@
       border: none;
       height: 100%;
       width: 100% !important;
-      a{
-        li{
-          .svg-icon{
+
+      a {
+        li {
+          .svg-icon {
             color: #fff;
             font-size: 18px;
             vertical-align: middle;
-            .icon{
-              color:#fff;
+
+            .icon {
+              color: #fff;
             }
           }
-          span{
+
+          span {
             color: #fff;
+            letter-spacing: 2px;
           }
-          &:hover{
-            .svg-icon{
+
+          &:hover {
+            .svg-icon {
               color: #43a7fe
             }
-            span{
+
+            span {
               color: #43a7fe;
             }
           }
@@ -100,11 +106,11 @@
       }
     }
 
-    .is-active>.el-submenu__title {
+    .is-active > .el-submenu__title {
       color: $subMenuActiveText !important;
     }
 
-    & .nest-menu .el-submenu>.el-submenu__title,
+    & .nest-menu .el-submenu > .el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
       background-color: $subMenuBg !important;
@@ -132,7 +138,7 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          margin-left: 18px;
         }
 
         .sub-el-icon {
@@ -144,7 +150,7 @@
     .el-submenu {
       overflow: hidden;
 
-      &>.el-submenu__title {
+      & > .el-submenu__title {
         padding: 0 !important;
 
         .svg-icon {
@@ -163,8 +169,8 @@
 
     .el-menu--collapse {
       .el-submenu {
-        &>.el-submenu__title {
-          &>span {
+        & > .el-submenu__title {
+          & > span {
             height: 0;
             width: 0;
             overflow: hidden;
@@ -211,17 +217,18 @@
 
 // when menu collapsed
 .el-menu--vertical {
-  &>.el-menu {
+  & > .el-menu {
     .svg-icon {
       margin-right: 16px;
     }
+
     .sub-el-icon {
       margin-right: 12px;
       margin-left: -2px;
     }
   }
 
-  .nest-menu .el-submenu>.el-submenu__title,
+  .nest-menu .el-submenu > .el-submenu__title,
   .el-menu-item {
     &:hover {
       // you can use $subMenuHover
@@ -230,7 +237,7 @@
   }
 
   // the scroll bar appears when the subMenu is too long
-  >.el-menu--popup {
+  > .el-menu--popup {
     max-height: 100vh;
     overflow-y: auto;
 
